# fastapiwebadmin

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements  requirements.txt  run_linux.sh  run_win.bat  start.sh
backend/app/alembic/: env.py
backend/app/apis/: __init__.py  api_router.py  deps.py
backend/app/apis/system/: __init__.py  department.py  docs.py  file.py  health.py  id_center.py  login_record.py  project.py  user.py
backend/app/common/: enums.py  response.py  schema.py
backend/app/config/: __init__.py  path_conf.py  setting.py
backend/app/core/: data_scope.py  database.py  dependencies.py  discover.py  logger.py  permission.py
backend/app/corelibs/: consts.py  custom_router.py
backend/app/db/: __init__.py  redis.py  sqlalchemy.py
backend/app/init/: exception.py  limiter.py  middleware.py  routers.py
backend/app/models/: __init__.py  base.py  celery_beat_models.py  system_models.py
backend/app/plugin/fea_celery/: __init__.py  model.py  plugin.toml  schema.py  worker.py
backend/app/plugin/fea_project/: plugin.toml
backend/app/schemas/system/: lookup.py  menu.py  project.py  roles.py  user.py
backend/app/scripts/: init_app.py  initialize.py
backend/app/services/system/: department.py  file.py  login_record.py  menu.py  (+2 more)
backend/app/utils/: captcha_util.py  common.py  context.py  current_user.py  dept_tree.py  import_util.py  ip2region_util.py  mail.py  request_meta.py  security.py  storage.py
backend/db_script/: db_init.sql
backend/env/: .env.dev  .env.dev.example  .env.prod.example
backend/tests/: test_health.py  test_permission.py
(+157 files in other folders)
