[project]
name = "fastapiwebadmin-backend"
version = "2.0.0"
description = "FastAPiwebAdmin 后端工程"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib==4.0.1",
    "aiofiles==23.1.0",
    "jinja2==3.1.6",
    "py-ip2region==3.0.2",
    "user-agents==2.2.0",
    "alembic==1.13.1",
    "anyio==3.6.2",
    "async-timeout>=4.0.3",
    "asyncmy==0.2.7",
    "celery==5.2.7",
    "certifi==2022.12.7",
    "charset-normalizer==3.0.1",
    "click==8.1.3",
    "colorama==0.4.6",
    "cryptography==40.0.2",
    "fastapi==0.111.0",
    "fastapi-limiter==0.1.6",
    "gevent==22.10.2",
    "greenlet==2.0.2",
    "gunicorn==20.1.0",
    "h11==0.14.0",
    "httpx==0.25.2",
    "idna==3.4",
    "loguru==0.6.0",
    "markupsafe==2.1.2",
    "orjson==3.8.6",
    "bcrypt==4.0.1",
    "passlib[bcrypt]==1.7.4",
    "pycryptodomex",
    "pydantic==2.7.3",
    "pydantic-settings==2.0.3",
    "pymysql==1.0.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.9",
    "redis==5.0.4",
    "requests==2.28.2",
    "sniffio==1.3.0",
    "sqlalchemy==2.0.3",
    "typer==0.12.3",
    "urllib3==1.26.14",
    "uvicorn==0.20.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
